# mir2c

./: Cargo.toml  README.md  a.c  a.rs  b.c  rust-toolchain  test.sh
src/: cargo-mir2c.rs  header.c  main.rs
