[package]
name = "mir2c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_tools_util = "0.2"

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cargo-mir2c"
path = "src/cargo-mir2c.rs"